@@ -50,7 +50,6 @@ dependencies {
     testImplementation(libs.appdirs)
     testImplementation(libs.caffeine)
     testImplementation(libs.embedmongo)
-
     testRuntimeOnly(incarnation("sapere"))
     testRuntimeOnly(incarnation("protelis"))
 }
@@ -58,6 +57,11 @@ dependencies {
 tasks.withType<Test> {
     useJUnitPlatform()
     maxHeapSize = "1500m"
+}
+
+tasks.withType<Test>().configureEach {
+    // for changing the default JVM args
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
 tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
